--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -5,13 +5,14 @@ services:
     build:
       context: ../backend
       dockerfile: Dockerfile
-      args:
-        - biuldno=0.8
+    restart: always
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
     depends_on:
       - db
+    env_file:
+      - ../backend/vocebrew/vocebrew/.env
 
   frontend:
     build:
@@ -19,6 +20,10 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    environment:
+      - API_URL=http://backend
+    depends_on:
+      - backend
 
   nginx:
     image: nginx:1.21.3-alpine
@@ -34,13 +39,20 @@ services:
       - backend
 
   db:
-    image: postgres:15.0-alpine
+    image: postgres:15.0
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    # env_file:
+    #   - ../backend/vocebrew/vocebrew/.env
     environment:
-      - POSTGRES_USER=ps_user
-      - POSTGRES_PASSWORD=ps_password
-      - POSTGRES_DB=password
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=vocebrew
+    # command: ["postgres", "-c", "max_connections=300"]
+    #   # - POSTGRES_USER=postgres
+    #   - POSTGRES_PASSWORD=pg_password
+    #   - POSTGRES_DB=vocebrew
+
 
 volumes:
   static_value:
