docker-compose works!

--- a/infra/default.conf
+++ b/infra/default.conf
@@ -34,6 +34,7 @@ server {
     server_tokens off;
     listen 80;
     server_name 127.0.0.1;
+    add_header Access-Control-Allow-Origin *;
 
     location /media/ {
         root /var/html;
@@ -63,6 +64,13 @@ server {
         proxy_pass http://backend:8000/admin/;
     }
 
+    location /backend {
+        rewrite /backend/(.*) /$1 break;
+        proxy_pass http://backend:8000;
+    }
+
+
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -71,10 +79,11 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
+    }
+    error_page   405     =200 $uri;
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+    root   /var/html/frontend/;
+    }
 
 }
